--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -156,3 +156,12 @@ jobs:
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
 
+      # Autopublish to the Foundry Admin panel
+      - name: FoundryVTT AutoPublish
+        uses: Varriount/fvtt-autopublish@v2.0.1
+        with:
+          username: ${{ secrets.FOUNDRY_ADMIN_USER }}
+          password: ${{ secrets.FOUNDRY_ADMIN_PW }}
+          module-id: ${{ secrets.FOUNDRY_ADMIN_ID }}
+          manifest-url: https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/module.json
+          manifest-file: ./module.json
