--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,6 +177,7 @@ jobs:
           accept: 200
           body: '{"id": "sheet-export", "dry-run": false, "release": { "version": "${{ github.event.release.tag_name }}", "manifest": "https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/module.json", "notes": "https://github.com/gioppoluca/sheet-export/blob/master/CHANGELOG.md", "compatibility": { "minimum": "11", "verified": "11", "maximum": "" } } }'
           log-response: true
+          timeout: 10000
       - name: "Use response"
         run: echo ${{ steps.foundry-api.outputs.response }}          
 
