ci: fix api endpoint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,11 +171,11 @@ jobs:
         uses: indiesdev/curl@v1.1
         id: foundry-api
         with:
-          url: https://api.foundryvtt.com/_api/packages/release_version/
+          url: https://foundryvtt.com/_api/packages/release_version/
           method: "POST"
           headers: '{ "Content-Type": "application/json", "Authorization": "${{ secrets.FOUNDRY_API_TOKEN }}" }'
           accept: 200
-          body: '{"id": "sheet-export", "dry-run": false, "release": { "version": "${{ github.event.release.tag_name }}", "manifest": "https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/module.json", "notes": "https://github.com/gioppoluca/sheet-export/blob/master/CHANGELOG.md", "compatibility": { "minimum": "11", "verified": "11", "maximum": "" } } }'
+          body: '{"id": "sheet-export", "dry-run": false, "release": { "version": "${{ github.event.release.tag_name }}", "manifest": "https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/module.json", "notes": "https://github.com/gioppoluca/sheet-export/blob/master/CHANGELOG.md", "compatibility": { "minimum": "11", "verified": "13", "maximum": "13" } } }'
           log-response: true
           timeout: 10000
       - name: "Use response"
